<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>
    <groupId>ru.lakeevda</groupId>
    <artifactId>ShopList</artifactId>
    <version>1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ShopList</name>
    <description>ShopList</description>

    <properties>
        <java.version>26</java.version>
        <artifact.version>${project.version}</artifact.version>

        <sonar.projectKey>lakeevda_shoplist</sonar.projectKey>
        <sonar.organization>shop-list</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <!--Spring-->
        <spring-cloud.version>2025.1.2</spring-cloud.version>
        <spring-boot-starter.version>4.1.0</spring-boot-starter.version>
        <spring-cloud-starter.version>5.0.2</spring-cloud-starter.version>
        <spring-cloud-starter-gateway.version>4.3.5</spring-cloud-starter-gateway.version>
        <!--Instruments-->
        <postgresql.version>42.7.13</postgresql.version>
        <lombok.version>1.18.46</lombok.version>
        <liquibase.version>5.0.3</liquibase.version>
        <springdoc.version>3.1.0</springdoc.version>
        <jsonwebtoken.version>0.13.0</jsonwebtoken.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <!--Plugins-->
        <spring-boot-maven-plugin.version>4.1.0</spring-boot-maven-plugin.version>
        <!--Test-->
        <spring-security-test.version>7.1.0</spring-security-test.version>
    </properties>

    <modules>
        <module>config-service</module>
        <module>server-service</module>
        <module>auth-service</module>
        <module>list-product-service</module>
        <module>gateway-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot-maven-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

</project>
